Fix stuck keys bug
A bug was happening that caused non-digit keypresses to trigger the last
clicked key on the calculator:

-> if the user clicked on "8" and then pressed Escape/Enter/Spacebar on
the keyboard, the program would run the function assigned to that key
(i.e.: escape = clear all values) and then it would trigger a click at
the number "8" button that was last clicked on the screen (and the
button would receive a black outline of 1px)

-> the calculator would behave correctly if the user interacted with it
only through the keyboard or the mouse, but would trigger this bug if
both input methods were used

This bug was corrected through the ".preventDefault()" method and the
black outline was removedby specifying a 0px value for the outline when
the element is ":focus-visible"

--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,6 @@ button:active {
 button[selected] {
     background-color: rgb(23, 128, 177);
 }
+:focus-visible {
+    outline: 0px;
+}
